:bug: Fix filterButton label not centered when using only text

--- a/src/react-chayns-filterbutton/component/FilterButton.scss
+++ b/src/react-chayns-filterbutton/component/FilterButton.scss
@@ -10,6 +10,10 @@
     .label {
         position: relative;
         z-index: 5;
+
+        b:not(:first-child) {
+            margin-left: 0.25em;
+        }
     }
 
     &--small {
